# transfer

agents-mcp/: .mcp.json
agents-mcp/clearcase-agent-mcp/: agent.py  backend_client.py  pyproject.toml  server.py
agents-mcp/p4-agent-mcp/: agent.py  backend_client.py  pyproject.toml  server.py  sessions.py
agentsatwork/: file_system_agent.py
aiagents-bootcamp/: README.md
aiagents-bootcamp/demo/: DAY_1_DEMO_SESSION_1_LLM_state.ipynb  DAY_1_DEMO_SESSION_2_CoT.ipynb  DAY_1_DEMO_SESSION_2_react.ipynb  DAY_1_DEMO_SESSION_3_HITL.ipynb  DAY_1_DEMO_SESSION_4_hierarchical_agent_teams.ipynb  DAY_1_DEMO_SESSION_4_swarms.ipynb  DAY_1_DEMO_SESSION_5_communication_patterns.ipynb  DAY_2_DEMO_SESSION_1_arxiv_mcp_langextract_pydantic.ipynb  DAY_2_DEMO_Session_2_langgraph_memory_types.ipynb  DAY_2_DEMO_Session_3_langgraph_planner_thinking_vs_unified_deep_research.ipynb  DAY_2_DEMO_Session_4_eval_harness.ipynb  DAY_2_DEMO_Session_4_external_evaluation_pipelines_Langfuse.ipynb  DAY_2_DEMO_Session_4_external_evaluation_pipelines_langsmith.ipynb  DAY_2_DEMO_Session_4_ruler_trace_answer_ranking_langsmith.ipynb  DAY_2_DEMO_Session_5_A2A_MCP_Governed.ipynb  DAY_2_DEMO_Session_5_OWASP_ASI_2026.ipynb
aiagents-bootcamp/hands_on/: DAY_1_HANDS_ON_SESSION_1_langgraph_web_search.ipynb  DAY_1_HANDS_ON_SESSION_2_ToT.ipynb  DAY_1_HANDS_ON_SESSION_3_HITL.ipynb  SKILL_consulting.md  (+9 more)
clearcase-mcp/: clearcase-mcp.py  cleartool.py  process.py
mcp-course/: CLAUDE.md  README.md  walkthrough_for_beginners.md
python-bootcamp/: 2026-01January-06.ipynb  2026-01January-13.ipynb  main.py
(+73 files in other folders)
